--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <!--Page Title-->
-    <title>jiwon^_^</title>
+    <title>jiwon💗</title>
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
